cargando nuevas vistas para diferenciar persona interno y externo